<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/albumArtImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/albumArt"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:id="@+id/songInfoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/albumArtImageView"
        android:orientation="vertical">

        <TextView
            android:id="@+id/songTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="Song Title" />

        <TextView
            android:id="@+id/albumArtistTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="Artist - Album" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/seekbarRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/songInfoLinearLayout"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/songTimeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="@string/duration_now_playing" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbarRelativeLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/shuffle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_shuffle" />

        <ImageView
            android:layout_width="wrap_content"
            android:contentDescription="@string/skip_previous"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:src="@drawable/ic_skip_previous" />

        <ImageView
            android:layout_width="wrap_content"
            android:contentDescription="@string/play_pause"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:src="@drawable/ic_play_arrow" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/skip_next"
            android:layout_margin="8dp"
            android:src="@drawable/ic_skip_next" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/repeat"
            android:layout_margin="8dp"
            android:src="@drawable/ic_repeat" />

    </LinearLayout>

</RelativeLayout>